--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,5 @@
             "Codesleeve\\LaravelStapler\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
