--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "codesleeve/stapler": "dev-master",
+        "codesleeve/stapler": "dev-custom",
         "laravel/framework": "4.*|5.*"
     },
     "autoload": {
